    * parent scan: new option "ping probes", that allows skipping 
      unreachable gateways.
    * User managament: Added fields for editing host/service notification commands
    * FIX: Removed double collect_hosts() call in activate changes hook
    * FIX: Fixed double hook execution when using localized multisite
    * FIX: User list shows names of contactgroups when no alias given

    BI:
    * Great speed up of rule compilation in large environments

    Multisite:
    * Added css class="dashboard_<name>" to the dashboard div for easier
    customization of the dashboard style of a special dashboard
    * Sidebar: Sorting aggregation groups in BI snapin now
    * Sidebar: Sorting sites in master control snapin case insensitive
    * FIX: fixed localization of general permissions
    * FIX: show multisite warning messages even after page reload
    * FIX: fix bug in Age ValueSpec: days had been ignored
    * FIX: fixed bug showing only sidebar after re-login in multisite
    * FIX: fixed logwatch loosing the master_url parameter in distributed setups
    * FIX: Fixed doubled var "site" in view editor (site and siteopt filter)

    Livecheck:
    * FIX: Compile livecheck also if diet libc is missing

1.2.0p2:
    Core:
    * simulation_mode: legacy_checks, custom_checks and active_checks
      are replaced with dummy checks always being OK
    * FIX: Precisely define order of reading of configuration files. This
      fixes a WATO rule precedence problem

    Checks & Agents:
    * FIX: Fixed syntax errors in a bunch of man pages
    * if_lancom: silently ignore Point-To-Point interfaces
    * if_lancom: add SSID to logical WLAN interface names
    * Added a collection of MSSQL checks for monitoring MSSQL servers
      (backups, tablespaces, counters)
    * New check wut_webio_io: Monitor the IO input channels on W&T Web-IO 
      devices
    * nfsmounts: reclassify "Stale NFS handle" from WARN to CRIT