@@ -238,225 +238,239 @@ register_rule(group,
                 title = _("Name"),
                 help = _("Will be used in the service description"),
                 allow_empty = False),
-            Dictionary(
-                title = _("Optional settings"),
+            Alternative(
+                title = _("Mode of the Check"),
+                help = _("Perform a check of the URL or the certificate expiration."),
                 elements = [
-                   ( "virthost",
-                     Tuple(
-                       title = _("Virtual host"),
-                       elements = [
-                         TextAscii(
-                           title = _("Name of the virtual host"),
-                           help = _("Set this in order to specify the name of the "
-                            "virtual host for the query (using HTTP/1.1). When you "
-                            "leave this empty, then the IP address of the host "
-                            "will be used instead."),
-                           allow_empty = False),
-                         Checkbox(
-                            label = _("Omit specifying an IP address"),
-                            help = _("Usually Check_MK will nail this check to the "
-                              "IP address of the host it is attached to. With this "
-                              "option you can have the check use the name of the "
-                              "virtual host instead and do a dynamic DNS lookup."),
-                            true_label = _("omit IP address"),
-                            false_label = _("specify IP address"),
-                          ),
-                        ]
-                      )
-                   ),
-                   ( "uri",
-                     TextAscii(
-                       title = _("URI to fetch (default is <tt>/</tt>)"),
-                       allow_empty = False,
-                       default_value = "/")
-                   ),
-                   ( "port", 
-                     Integer(
-                       title = _("TCP Port"), 
-                       minvalue = 1, 
-                       maxvalue = 65535,
-                       default_value = 80)
-                   ),
-                   ( "ssl",
-                     FixedValue(
-                         value = True,
-                         totext = _("use SSL/HTTPS"),
-                         title = _("Use SSL/HTTPS for the connection."))
-                   ),
-                   ( "cert_days",
-                     Integer(
-                         title = _("Maximum certificate age"),
-                         help = _("Minimum number of days a certificate has to be valid. "
-                                  "Port defaults to 443. When this option is used the URL "
-                                  "is not checked."),
-                         unit = _("days"),
-                     )
-                   ),
-                   ( "sni",
-                     FixedValue(
-                         value = True,
-                         totext = _("enable SNI"),
-                         title = _("Enable SSL/TLS hostname extension support (SNI)"),
-                     )
-                   ),
-                   ( "response_time",
-                     Tuple(
-                         title = _("Expected response time"),
-                         elements = [
-                             Float(
-                                 title = _("Warning at"), 
-                                 unit = "ms",
-                                 default_value = 100.0),
-                             Float(
-                                 title = _("Critical at"), 
-                                 unit = "ms",
-                                 default_value = 200.0),
-                         ])
-                    ),
-                    ( "timeout",
-                      Integer(
-                          title = _("Seconds before connection times out"),
-                          unit = _("sec"),
-                          default_value = 10,
-                      )
-                    ),
-                    ( "user_agent",
-                      TextAscii(
-                          title = _("User Agent"),
-                          help = _("String to be sent in http header as \"User Agent\""),
-                          allow_empty = False,
-                      ),
-                    ),
-                    ( "add_headers",
-                      ListOfStrings(
-                          title = _("Additional header lines"),
-                          orientation = "vertical",
-                          valuespec = TextAscii(size = 40),
-                      ),
-                    ),
-                    ( "auth",
-                      Tuple(
-                          title = _("Authorization"),
-                          help = _("Credentials for HTTP Basic Authentication"),
-                          elements = [
+                    Dictionary(
+                        title = _("Check the URL"),
+                        elements = [
+                           ( "virthost",
+                             Tuple(
+                               title = _("Virtual host"),
+                               elements = [
+                                 TextAscii(
+                                   title = _("Name of the virtual host"),
+                                   help = _("Set this in order to specify the name of the "
+                                    "virtual host for the query (using HTTP/1.1). When you "
+                                    "leave this empty, then the IP address of the host "
+                                    "will be used instead."),
+                                   allow_empty = False),
+                                 Checkbox(
+                                    label = _("Omit specifying an IP address"),
+                                    help = _("Usually Check_MK will nail this check to the "
+                                      "IP address of the host it is attached to. With this "
+                                      "option you can have the check use the name of the "
+                                      "virtual host instead and do a dynamic DNS lookup."),
+                                    true_label = _("omit IP address"),
+                                    false_label = _("specify IP address"),
+                                  ),
+                                ]
+                              )
+                           ),
+                           ( "uri",
+                             TextAscii(
+                               title = _("URI to fetch (default is <tt>/</tt>)"),
+                               allow_empty = False,
+                               default_value = "/")
+                           ),
+                           ( "port", 
+                             Integer(
+                               title = _("TCP Port"), 
+                               minvalue = 1, 
+                               maxvalue = 65535,
+                               default_value = 80)
+                           ),
+                           ( "ssl",
+                             FixedValue(
+                                 value = True,
+                                 totext = _("use SSL/HTTPS"),
+                                 title = _("Use SSL/HTTPS for the connection."))
+                           ),
+                           ( "sni",
+                             FixedValue(
+                                 value = True,
+                                 totext = _("enable SNI"),
+                                 title = _("Enable SSL/TLS hostname extension support (SNI)"),
+                             )
+                           ),
+                           ( "response_time",
+                             Tuple(
+                                 title = _("Expected response time"),
+                                 elements = [
+                                     Float(
+                                         title = _("Warning at"), 
+                                         unit = "ms",
+                                         default_value = 100.0),
+                                     Float(
+                                         title = _("Critical at"), 
+                                         unit = "ms",
+                                         default_value = 200.0),
+                                 ])
+                            ),
+                            ( "timeout",
+                              Integer(
+                                  title = _("Seconds before connection times out"),
+                                  unit = _("sec"),
+                                  default_value = 10,
+                              )
+                            ),
+                            ( "user_agent",
                               TextAscii(
-                                  title = _("Username"),
-                                  size = 12,
-                                  allow_empty = False),
-                              TextAscii(
-                                  title = _("Password"),
-                                  size = 12,
-                                  allow_empty = False),
-                          ])
-                    ),
-                    ( "proxy_auth",
-                      Tuple(
-                          title = _("Proxy-Authorization"),
-                          help = _("Credentials for HTTP Proxy with basic authentication"),
-                          elements = [
-                              TextAscii(
-                                  title = _("Username"),
-                                  size = 12,
-                                  allow_empty = False),
-                              TextAscii(
-                                  title = _("Password"),
-                                  size = 12,
-                                  allow_empty = False),
-                          ])
-                    ),
-                    ( "onredirect",
-                      DropdownChoice(
-                          title = _("How to handle redirect"),
-                          choices = [
-                            ( 'ok',         _("Make check OK") ),
-                            ( 'warning',    _("Make check WARNING") ),
-                            ( 'critical',   _("Make check CRITICAL") ),
-                            ( 'follow',     _("Follow the redirection") ),
-                            ( 'sticky',     _("Follow, but stay to same IP address") ),
-                            ( 'stickyport', _("Follow, but stay to same IP-address and port") ),
-                          ],
-                          default_value = 'follow'),
-                    ),
-                    ( "expect_response",
-                      ListOfStrings(
-                          title = _("Strings to expect in server response"),
-                          help = _("At least one of these strings is expected in "
-                                   "the first (status) line of the server response "
-                                   "(default: <tt>HTTP/1.</tt>). If specified skips "
-                                   "all other status line logic (ex: 3xx, 4xx, 5xx "
-                                   "processing)"),
-                      )
-                    ),
-                    ( "expect_string",
-                      TextAscii(
-                          title = _("Fixed string to expect in the content"),
-                          allow_empty = False,
-                      )
-                    ),
-                    ( "expect_regex",
-                      Tuple(
-                          title = _("Regular expression to expect in content"),
-                          orientation = "vertical",
-                          show_titles = False,
-                          elements = [
-                              RegExp(label = _("Regular expression: ")),
-                              Checkbox(label = _("Case insensitive")),
-                              Checkbox(label = _("return CRITICAL if found, OK if not")),
-                          ])
-                    ),
-                    ( "post_data",
-                      Tuple(
-                          title = _("Send HTTP POST data"),
-                          elements = [
-                              TextAscii(
-                                  title = _("HTTP POST data"),
-                                  help = _("Data to send via HTTP POST method. "
-                                           "Please make sure, that the data is URL-encoded."),
-                                  size = 40,
+                                  title = _("User Agent"),
+                                  help = _("String to be sent in http header as \"User Agent\""),
+                                  allow_empty = False,
                               ),
+                            ),
+                            ( "add_headers",
+                              ListOfStrings(
+                                  title = _("Additional header lines"),
+                                  orientation = "vertical",
+                                  valuespec = TextAscii(size = 40),
+                              ),
+                            ),
+                            ( "auth",
+                              Tuple(
+                                  title = _("Authorization"),
+                                  help = _("Credentials for HTTP Basic Authentication"),
+                                  elements = [
+                                      TextAscii(
+                                          title = _("Username"),
+                                          size = 12,
+                                          allow_empty = False),
+                                      TextAscii(
+                                          title = _("Password"),
+                                          size = 12,
+                                          allow_empty = False),
+                                  ])
+                            ),
+                            ( "proxy_auth",
+                              Tuple(
+                                  title = _("Proxy-Authorization"),
+                                  help = _("Credentials for HTTP Proxy with basic authentication"),
+                                  elements = [
+                                      TextAscii(
+                                          title = _("Username"),
+                                          size = 12,
+                                          allow_empty = False),
+                                      TextAscii(
+                                          title = _("Password"),
+                                          size = 12,
+                                          allow_empty = False),
+                                  ])
+                            ),
+                            ( "onredirect",
+                              DropdownChoice(
+                                  title = _("How to handle redirect"),
+                                  choices = [
+                                    ( 'ok',         _("Make check OK") ),
+                                    ( 'warning',    _("Make check WARNING") ),
+                                    ( 'critical',   _("Make check CRITICAL") ),
+                                    ( 'follow',     _("Follow the redirection") ),
+                                    ( 'sticky',     _("Follow, but stay to same IP address") ),
+                                    ( 'stickyport', _("Follow, but stay to same IP-address and port") ),
+                                  ],
+                                  default_value = 'follow'),
+                            ),
+                            ( "expect_response",
+                              ListOfStrings(
+                                  title = _("Strings to expect in server response"),
+                                  help = _("At least one of these strings is expected in "
+                                           "the first (status) line of the server response "
+                                           "(default: <tt>HTTP/1.</tt>). If specified skips "
+                                           "all other status line logic (ex: 3xx, 4xx, 5xx "
+                                           "processing)"),
+                              )
+                            ),
+                            ( "expect_string",
                               TextAscii(
-                                  title = _("Content-Type"),
-                                  default_value = "text/html"),
-                         ])
+                                  title = _("Fixed string to expect in the content"),
+                                  allow_empty = False,
+                              )
+                            ),
+                            ( "expect_regex",
+                              Tuple(
+                                  title = _("Regular expression to expect in content"),
+                                  orientation = "vertical",
+                                  show_titles = False,
+                                  elements = [
+                                      RegExp(label = _("Regular expression: ")),
+                                      Checkbox(label = _("Case insensitive")),
+                                      Checkbox(label = _("return CRITICAL if found, OK if not")),
+                                  ])
+                            ),
+                            ( "post_data",
+                              Tuple(
+                                  title = _("Send HTTP POST data"),
+                                  elements = [
+                                      TextAscii(
+                                          title = _("HTTP POST data"),
+                                          help = _("Data to send via HTTP POST method. "
+                                                   "Please make sure, that the data is URL-encoded."),
+                                          size = 40,
+                                      ),
+                                      TextAscii(
+                                          title = _("Content-Type"),
+                                          default_value = "text/html"),
+                                 ])
+                            ),
+                            ( "method",
+                              DropdownChoice(
+                                  title = _("HTTP Method"),
+                                  default_value = "GET",
+                                  choices = [
+                                    ( "GET", "GET" ),
+                                    ( "POST", "POST" ),
+                                    ( "OPTIONS", "OPTIONS" ),
+                                    ( "TRACE", "TRACE" ),
+                                    ( "PUT", "PUT" ),
+                                    ( "DELETE", "DELETE" ),
+                                    ( "HEAD", "HEAD" ),
+                                    ( "CONNECT", "CONNECT" ),
+                                  ])
+                            ),
+                            ( "no_body",
+                              FixedValue(
+                                  value = True,
+                                  title = _("Don't wait for document body"),
+                                  help = _("Note: this still does an HTTP GET or POST, not a HEAD."),
+                                  totext = _("dont wait for body"))
+                            ),
+                            ( "page_size",
+                              Tuple(
+                                  title = _("Page size to expect"),
+                                  elements = [
+                                      Integer(title = _("Minimum"), unit=_("Bytes")),
+                                      Integer(title = _("Maximum"), unit=_("Bytes")),
+                                  ])
+                            ),
+                            ( "max_age",
+                              Age(
+                                  title = _("Maximum age"),
+                                  help = _("Warn, if the age of the page is older than this"),
+                                  default_value = 3600 * 24,
+                              )
+                            ),
+                        ]
                     ),
-                    ( "method",
-                      DropdownChoice(
-                          title = _("HTTP Method"),
-                          default_value = "GET",
-                          choices = [
-                            ( "GET", "GET" ),
-                            ( "POST", "POST" ),
-                            ( "OPTIONS", "OPTIONS" ),
-                            ( "TRACE", "TRACE" ),
-                            ( "PUT", "PUT" ),
-                            ( "DELETE", "DELETE" ),
-                            ( "HEAD", "HEAD" ),
-                            ( "CONNECT", "CONNECT" ),
-                          ])
+
+                    Dictionary(
+                        title = _("Check SSL Certificate Age"),
+                        elements = [
+                           ( "cert_days",
+                             Integer(
+                                 title = _("Age"),
+                                 help = _("Minimum number of days a certificate has to be valid. "
+                                          "Port defaults to 443. When this option is used the URL "
+                                          "is not checked."),
+                                 unit = _("days"),
+                             )
+                          ),
+                        ],
+                        required_keys = [ "cert_days" ],
                     ),
-                    ( "no_body",
-                      FixedValue(
-                          value = True,
-                          title = _("Don't wait for document body"),
-                          help = _("Note: this still does an HTTP GET or POST, not a HEAD."),
-                          totext = _("dont wait for body"))
-                    ),
-                    ( "page_size",
-                      Tuple(
-                          title = _("Page size to expect"),
-                          elements = [
-                              Integer(title = _("Minimum"), unit=_("Bytes")),
-                              Integer(title = _("Maximum"), unit=_("Bytes")),
-                          ])
-                    ),
-                    ( "max_age",
-                      Age(
-                          title = _("Maximum age"),
-                          help = _("Warn, if the age of the page is older than this"),
-                          default_value = 3600 * 24,
-                      )
-                    ),
-                ]),
+                ]
+            ),
         ]
     ),
     match = 'all')
