@@ -73,6 +73,8 @@
     * FIX: Removed double collect_hosts() call in activate changes hook
     * FIX: Fixed double hook execution when using localized multisite
     * FIX: User list shows names of contactgroups when no alias given
+    * FIX: Reflecting alternative mode of check_http (check ssl certificate
+    age) in WATO rule editor
 
     BI:
     * Great speed up of rule compilation in large environments
